<resources>
    <string name="app_name">CareApplication</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="loginButton">登入</string>
    <string name="forgetPassword">忘記密碼</string>
    <string name="name">姓名</string>
    <string name="phone">手機</string>
    <string name="email">信箱</string>
    <string name="register">註冊</string>
    <string name="sendPassword">送出密碼</string>
    <string name="memberInfo">會員資料</string>
    <string name="finishEdit">完成修改</string>


</resources>
